fix: card border, tab icon alignment

--- a/src/components/reusable/tabs/tab.scss
+++ b/src/components/reusable/tabs/tab.scss
@@ -42,6 +42,10 @@
   transition: border-color 150ms ease-out, background-color 150ms ease-out,
     color 150ms ease-out;
 
+  ::slotted(svg) {
+    display: flex;
+  }
+
   &.size--sm {
     @include typography.type-ui-02;
     height: 30px;
